capture/default/personal/us-east-1/20250708/212018/vpcs/devops-public-vpc/network_acls.json
{
    "NetworkAcls": [
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-0b35baba95a5a21cf",
                    "NetworkAclId": "acl-0990f4cab4b9d22eb",
                    "SubnetId": "subnet-03ea1805ea65cba01"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-0990f4cab4b9d22eb",
            "Tags": [],
            "VpcId": "vpc-028b2dc2728406fd9",
            "OwnerId": "***"
        }
    ]
}
