capture/default/personal/us-east-1/20250708/212018/vpcs/devops-public-vpc/security_groups_unattached.json
[
  {
    "GroupId": "sg-0c5a524d10af6efe9",
    "IpPermissionsEgress": [
      {
        "IpProtocol": "-1",
        "UserIdGroupPairs": [],
        "IpRanges": [
          {
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "Ipv6Ranges": [],
        "PrefixListIds": []
      }
    ],
    "VpcId": "vpc-028b2dc2728406fd9",
    "SecurityGroupArn": "arn:aws:ec2:us-east-1:***:security-group/sg-0c5a524d10af6efe9",
    "OwnerId": "***",
    "GroupName": "default",
    "Description": "default VPC security group",
    "IpPermissions": [
      {
        "IpProtocol": "-1",
        "UserIdGroupPairs": [
          {
            "UserId": "***",
            "GroupId": "sg-0c5a524d10af6efe9"
          }
        ],
        "IpRanges": [],
        "Ipv6Ranges": [],
        "PrefixListIds": []
      }
    ]
  }
]
