capture/default/personal/us-east-1/20250708/212018/vpcs/devops-public-vpc/vpc_route_tables.json
{
    "RouteTables": [
        {
            "Associations": [
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-04ef5dbae678a5c08",
                    "RouteTableId": "rtb-0a105b3415eec5b66",
                    "SubnetId": "subnet-03ea1805ea65cba01",
                    "AssociationState": {
                        "State": "associated"
                    }
                }
            ],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0a105b3415eec5b66",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.0.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "10.1.0.0/16",
                    "Origin": "CreateRoute",
                    "State": "active",
                    "VpcPeeringConnectionId": "pcx-0b2f7050573bcea16"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "GatewayId": "igw-00c373c8feb8a9fc9",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [
                {
                    "Key": "aws:cloudformation:stack-id",
                    "Value": "arn:aws:cloudformation:us-east-1:***:stack/network-mapping/abc89460-5c7a-11f0-9326-0affc332652d"
                },
                {
                    "Key": "DevOps",
                    "Value": "true"
                },
                {
                    "Key": "Name",
                    "Value": "DevOps-PublicRouteTable"
                },
                {
                    "Key": "aws:cloudformation:logical-id",
                    "Value": "PublicRouteTable"
                },
                {
                    "Key": "aws:cloudformation:stack-name",
                    "Value": "network-mapping"
                }
            ],
            "VpcId": "vpc-028b2dc2728406fd9",
            "OwnerId": "***"
        },
        {
            "Associations": [
                {
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-02a8bd685ed7c6224",
                    "RouteTableId": "rtb-0c47202b5a86ce142",
                    "AssociationState": {
                        "State": "associated"
                    }
                }
            ],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0c47202b5a86ce142",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.0.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-028b2dc2728406fd9",
            "OwnerId": "***"
        }
    ]
}
